fixed alignment issue again (????)

--- a/css/main.css
+++ b/css/main.css
@@ -28,7 +28,7 @@
 body {
     font-family: 'Rubik', sans-serif;
     margin: 0%;
-    margin-left: 0.7vw;
+    margin-left: 1.1vw;
     overflow-x: hidden;
 }
 
@@ -46,7 +46,7 @@ nav {
     width: 100vw;
     display: inline-flex;
     margin: 0%;
-    margin-left: -0.7vw;
+    margin-left: -1.1vw;
     box-sizing: border-box;
     height: 10vh;
     max-height: 75px;
@@ -132,6 +132,7 @@ nav button {
 ::placeholder {
     color: #CCCCCC;
     font-style: italic;
+    font-family: 'Rubik', sans-serif;
  }
 
 #navRSCLogo img {
@@ -224,7 +225,7 @@ hamburger-menu {
     height: 91vh;
     overflow-y: auto;
     opacity: 1;
-    margin-left: -0.7vw;
+    margin-left: -1.1vw;
 }
 
 #hamBlack {
